tryout to fix mainpagelayout issue using flexbox

--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -579,7 +579,8 @@ ul.listings li a section aside figure {
 	}
 	ul.listings > li.list-items, ul.listings > li.list-items a, ul.listings > li.list-items a section {
 /* 		flex-grow:1; */
-	}	
+	}
+
 }
 @media screen and (max-width:480px) {
 	ul.listings > li.list-items {
@@ -598,3 +599,84 @@ ul.listings li.list-items a {
 		flex-grow:1;
 	}	
 }
+
+	div.my-container > div#tableWrap div.tableBlock {
+    display: flex !important;
+    justify-content: space-around;
+	}
+
+	div#tableWrap div.tableBlock div.tableRow {
+		display: flex;
+		flex: 1;
+		/* margin: 5px; */
+	}
+
+	div#tableWrap div.tableBlock div.tableRow div.tableCell {
+		/* margin-right: 5px; */
+		/* flex: 1; */
+		width: 35%;
+		display: flex;
+		flex: 1;
+		flex-flow: column wrap;
+		justify-content: center;
+		align-content: stretch;
+		align-items: center;
+		padding: 10px;
+	}
+
+	div#tableWrap > div:nth-child(2) > div > div.tableCell {
+		display: flex;
+		flex-flow: column wrap;
+		flex: 1;
+	}
+
+	div#tableWrap > div  div div.tableCell.nopad div {
+		display: flex;
+		flex-flow: column;
+		flex: 1;
+	}
+
+	div#tableWrap > div > div > div.tableCell > div.tableBlock div.tableRow {
+		display: flex;
+		flex: 1;
+		align-items: stretch;
+	}
+
+	div#tableWrap > div div div.tableCell.nopad div div.tableRow a {
+		display: flex;
+		flex: 1;
+	}
+
+	div#tableWrap div.tableBlock div.tableRow div.tableCell2 {
+		flex-grow: 2;
+	}
+
+	div.tableCell a, div.tableCell2 a {
+		display: flex;
+		flex: 1;
+		width: 100%;
+		height: 100%;
+	}
+
+	div#tableWrap > div.tableBlock {
+		margin: 5px 5px 0px 5px;
+	}
+
+	div#tableWrap div.tableBlock {}
+
+	#tableWrap > div.tableBlock > div.tableRow > div.tableCell:nth-child(1), #tableWrap > div.tableBlock > div.tableRow > div.tableCell2:nth-child(1) {
+		margin-right: 5px;
+	}
+
+	#tableWrap > div > div > div.tableCell.nopad > div div div.tableCell {
+		width: 100%;
+		padding: 0 !important;
+	}
+
+	.tableCell.nopad {
+		padding: 0px !important;
+	}
+
+	#tableWrap > div > div > div.tableCell > a > div > div > div {
+		padding: 0 !important;
+	}
